--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "mammoth": "^1.9.1",
+    "node-cron": "^4.1.1",
     "openai": "^5.7.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
