--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^5.7.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
     "sharp": "^0.34.2",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
