--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ghcr.io/betjuliano/webwhats-app:latest
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=postgresql://webwhats:${POSTGRES_PASSWORD}@postgres:5432/webwhats
+      - DATABASE_URL=postgresql://webwhats:${POSTGRES_PASSWORD}@postgres:5432/webwhats?sslmode=disable
       - REDIS_URL=redis://redis:6379
       - EVOLUTION_API_URL=${EVOLUTION_API_URL}
       - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
